// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TagsInput > and by using the keyboard the user can remove a tag 1`] = `
<DocumentFragment>
  <div
    class="flex items-center flex-wrap gap-1 h-fit py-2 rounded-md transition-all overflow-hidden min-h-10 px-4"
  >
    <span
      aria-disabled="false"
      class="badge badge-ghost text-xs rounded-md relative flex items-center gap-1 [&>span]:truncate [&>span]:max-w-24 aria-disabled:opacity-50 aria-disabled:cursor-not-allowed focus-visible:outline-none ring-1 ring-inset opacity-80"
      data-active="true"
      tabindex="0"
    >
      <span
        class="truncate max-w-24"
      >
        World
      </span>
      <button
        aria-label="Remove World option"
        aria-roledescription="button to remove option"
        class="transition-all duration-300 disabled:cursor-not-allowed [&:hover:not(:disabled)]:opacity-80"
        type="button"
      >
        <span
          class="sr-only"
        >
          Remove World option
        </span>
        <svg
          class="lucide lucide-x h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 6 6 18"
          />
          <path
            d="m6 6 12 12"
          />
        </svg>
      </button>
    </span>
    <input
      aria-label="Enter anything"
      class="input rounded-md transition-all duration-100 min-h-fit outline-0 border-none h-5 min-w-fit flex-1 focus-visible:outline-0 focus-visible:ring-0 focus-visible:ring-offset-0 focus-visible:border-0 placeholder:text-muted-foreground px-1 caret-transparent"
      tabindex="0"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`TagsInput > and the user can only enter a certain minimum or maximum number of tags 1`] = `
<DocumentFragment>
  <div
    class="flex items-center flex-wrap gap-1 h-fit py-2 rounded-md transition-all overflow-hidden min-h-10 px-4"
  >
    <span
      aria-disabled="true"
      class="badge badge-ghost text-xs rounded-md relative flex items-center gap-1 [&>span]:truncate [&>span]:max-w-24 aria-disabled:opacity-50 aria-disabled:cursor-not-allowed focus-visible:outline-none"
      data-active="false"
      tabindex="-1"
    >
      <span
        class="truncate max-w-24"
      >
        World
      </span>
      <button
        aria-label="Remove World option"
        aria-roledescription="button to remove option"
        class="transition-all duration-300 disabled:cursor-not-allowed [&:hover:not(:disabled)]:opacity-80"
        disabled=""
        type="button"
      >
        <span
          class="sr-only"
        >
          Remove World option
        </span>
        <svg
          class="lucide lucide-x h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 6 6 18"
          />
          <path
            d="m6 6 12 12"
          />
        </svg>
      </button>
    </span>
    <input
      aria-label="Enter anything"
      class="input rounded-md transition-all duration-100 min-h-fit outline-0 border-none h-5 min-w-fit flex-1 focus-visible:outline-0 focus-visible:ring-0 focus-visible:ring-offset-0 focus-visible:border-0 placeholder:text-muted-foreground px-1"
      tabindex="0"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`TagsInput > and the user can remove a tag 1`] = `
<DocumentFragment>
  <div
    class="flex items-center flex-wrap gap-1 h-fit py-2 rounded-md transition-all overflow-hidden min-h-10 px-4"
  >
    <input
      aria-label="Enter anything"
      class="input rounded-md transition-all duration-100 min-h-fit outline-0 border-none h-5 min-w-fit flex-1 focus-visible:outline-0 focus-visible:ring-0 focus-visible:ring-offset-0 focus-visible:border-0 placeholder:text-muted-foreground px-1"
      tabindex="0"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`TagsInput > and the user enters a tag 1`] = `
<DocumentFragment>
  <div
    class="flex items-center flex-wrap gap-1 h-fit py-2 rounded-md transition-all overflow-hidden min-h-10 px-4"
  >
    <span
      aria-disabled="false"
      class="badge badge-ghost text-xs rounded-md relative flex items-center gap-1 [&>span]:truncate [&>span]:max-w-24 aria-disabled:opacity-50 aria-disabled:cursor-not-allowed focus-visible:outline-none"
      data-active="false"
      tabindex="-1"
    >
      <span
        class="truncate max-w-24"
      >
        Hello
      </span>
      <button
        aria-label="Remove Hello option"
        aria-roledescription="button to remove option"
        class="transition-all duration-300 disabled:cursor-not-allowed [&:hover:not(:disabled)]:opacity-80"
        type="button"
      >
        <span
          class="sr-only"
        >
          Remove Hello option
        </span>
        <svg
          class="lucide lucide-x h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 6 6 18"
          />
          <path
            d="m6 6 12 12"
          />
        </svg>
      </button>
    </span>
    <span
      aria-disabled="false"
      class="badge badge-ghost text-xs rounded-md relative flex items-center gap-1 [&>span]:truncate [&>span]:max-w-24 aria-disabled:opacity-50 aria-disabled:cursor-not-allowed focus-visible:outline-none"
      data-active="false"
      tabindex="-1"
    >
      <span
        class="truncate max-w-24"
      >
        World
      </span>
      <button
        aria-label="Remove World option"
        aria-roledescription="button to remove option"
        class="transition-all duration-300 disabled:cursor-not-allowed [&:hover:not(:disabled)]:opacity-80"
        type="button"
      >
        <span
          class="sr-only"
        >
          Remove World option
        </span>
        <svg
          class="lucide lucide-x h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 6 6 18"
          />
          <path
            d="m6 6 12 12"
          />
        </svg>
      </button>
    </span>
    <input
      aria-label="Enter anything"
      class="input rounded-md transition-all duration-100 min-h-fit outline-0 border-none h-5 min-w-fit flex-1 focus-visible:outline-0 focus-visible:ring-0 focus-visible:ring-offset-0 focus-visible:border-0 placeholder:text-muted-foreground px-1"
      tabindex="0"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`TagsInput > has accent variant 1`] = `
<DocumentFragment>
  <div
    class="flex items-center flex-wrap gap-1 h-fit py-2 rounded-md transition-all overflow-hidden border border-accent min-h-10 px-4"
  >
    <input
      class="input rounded-md transition-all duration-100 min-h-fit outline-0 border-none h-5 min-w-fit flex-1 focus-visible:outline-0 focus-visible:ring-0 focus-visible:ring-offset-0 focus-visible:border-0 placeholder:text-muted-foreground px-1"
      placeholder="accent badge"
      tabindex="0"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`TagsInput > has default variant 1`] = `
<DocumentFragment>
  <div
    class="flex items-center flex-wrap gap-1 h-fit py-2 rounded-md transition-all overflow-hidden border-0 min-h-10 px-4"
  >
    <input
      class="input rounded-md transition-all duration-100 min-h-fit outline-0 border-none h-5 min-w-fit flex-1 focus-visible:outline-0 focus-visible:ring-0 focus-visible:ring-offset-0 focus-visible:border-0 placeholder:text-muted-foreground px-1"
      placeholder="default badge"
      tabindex="0"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`TagsInput > has error variant 1`] = `
<DocumentFragment>
  <div
    class="flex items-center flex-wrap gap-1 h-fit py-2 rounded-md transition-all overflow-hidden border border-error min-h-10 px-4"
  >
    <input
      class="input rounded-md transition-all duration-100 min-h-fit outline-0 border-none h-5 min-w-fit flex-1 focus-visible:outline-0 focus-visible:ring-0 focus-visible:ring-offset-0 focus-visible:border-0 placeholder:text-muted-foreground px-1"
      placeholder="error badge"
      tabindex="0"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`TagsInput > has ghost variant 1`] = `
<DocumentFragment>
  <div
    class="flex items-center flex-wrap gap-1 h-fit py-2 rounded-md transition-all overflow-hidden border border-ghost min-h-10 px-4"
  >
    <input
      class="input rounded-md transition-all duration-100 min-h-fit outline-0 border-none h-5 min-w-fit flex-1 focus-visible:outline-0 focus-visible:ring-0 focus-visible:ring-offset-0 focus-visible:border-0 placeholder:text-muted-foreground px-1"
      placeholder="ghost badge"
      tabindex="0"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`TagsInput > has info variant 1`] = `
<DocumentFragment>
  <div
    class="flex items-center flex-wrap gap-1 h-fit py-2 rounded-md transition-all overflow-hidden border border-info min-h-10 px-4"
  >
    <input
      class="input rounded-md transition-all duration-100 min-h-fit outline-0 border-none h-5 min-w-fit flex-1 focus-visible:outline-0 focus-visible:ring-0 focus-visible:ring-offset-0 focus-visible:border-0 placeholder:text-muted-foreground px-1"
      placeholder="info badge"
      tabindex="0"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`TagsInput > has large (lg) size 1`] = `
<DocumentFragment>
  <div
    class="flex items-center flex-wrap gap-1 h-fit py-2 rounded-md transition-all overflow-hidden min-h-16 px-5 text-lg"
  >
    <input
      class="input rounded-md transition-all duration-100 min-h-fit outline-0 border-none min-w-fit flex-1 focus-visible:outline-0 focus-visible:ring-0 focus-visible:ring-offset-0 focus-visible:border-0 placeholder:text-muted-foreground px-1 h-6 text-lg"
      placeholder="TagsInput large"
      tabindex="0"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`TagsInput > has medium (md) size 1`] = `
<DocumentFragment>
  <div
    class="flex items-center flex-wrap gap-1 h-fit py-2 rounded-md transition-all overflow-hidden min-h-12 px-4 text-sm"
  >
    <input
      class="input rounded-md transition-all duration-100 min-h-fit outline-0 border-none min-w-fit flex-1 focus-visible:outline-0 focus-visible:ring-0 focus-visible:ring-offset-0 focus-visible:border-0 placeholder:text-muted-foreground px-1 h-5 text-sm"
      placeholder="TagsInput medium"
      tabindex="0"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`TagsInput > has no outline 1`] = `
<DocumentFragment>
  <div
    class="flex items-center flex-wrap gap-1 h-fit py-2 rounded-md transition-all overflow-hidden min-h-10 px-4"
  >
    <input
      class="input rounded-md transition-all duration-100 min-h-fit outline-0 border-none h-5 min-w-fit flex-1 focus-visible:outline-0 focus-visible:ring-0 focus-visible:ring-offset-0 focus-visible:border-0 placeholder:text-muted-foreground px-1"
      placeholder="TagsInput has no outline"
      tabindex="0"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`TagsInput > has outline 1`] = `
<DocumentFragment>
  <div
    class="flex items-center flex-wrap gap-1 h-fit py-2 rounded-md transition-all overflow-hidden border min-h-10 px-4 border-neutral-content"
  >
    <input
      class="input rounded-md transition-all duration-100 min-h-fit outline-0 border-none h-5 min-w-fit flex-1 focus-visible:outline-0 focus-visible:ring-0 focus-visible:ring-offset-0 focus-visible:border-0 placeholder:text-muted-foreground px-1"
      placeholder="TagsInput has outline"
      tabindex="0"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`TagsInput > has primary variant 1`] = `
<DocumentFragment>
  <div
    class="flex items-center flex-wrap gap-1 h-fit py-2 rounded-md transition-all overflow-hidden border border-primary min-h-10 px-4"
  >
    <input
      class="input rounded-md transition-all duration-100 min-h-fit outline-0 border-none h-5 min-w-fit flex-1 focus-visible:outline-0 focus-visible:ring-0 focus-visible:ring-offset-0 focus-visible:border-0 placeholder:text-muted-foreground px-1"
      placeholder="primary badge"
      tabindex="0"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`TagsInput > has secondary variant 1`] = `
<DocumentFragment>
  <div
    class="flex items-center flex-wrap gap-1 h-fit py-2 rounded-md transition-all overflow-hidden border border-secondary min-h-10 px-4"
  >
    <input
      class="input rounded-md transition-all duration-100 min-h-fit outline-0 border-none h-5 min-w-fit flex-1 focus-visible:outline-0 focus-visible:ring-0 focus-visible:ring-offset-0 focus-visible:border-0 placeholder:text-muted-foreground px-1"
      placeholder="secondary badge"
      tabindex="0"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`TagsInput > has small (sm) size 1`] = `
<DocumentFragment>
  <div
    class="flex items-center flex-wrap gap-1 h-fit rounded-md transition-all overflow-hidden min-h-8 px-3 py-1.5 text-sm"
  >
    <input
      class="input rounded-md transition-all duration-100 min-h-fit outline-0 border-none min-w-fit flex-1 focus-visible:outline-0 focus-visible:ring-0 focus-visible:ring-offset-0 focus-visible:border-0 placeholder:text-muted-foreground px-1 h-4 text-sm"
      placeholder="TagsInput small"
      tabindex="0"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`TagsInput > has success variant 1`] = `
<DocumentFragment>
  <div
    class="flex items-center flex-wrap gap-1 h-fit py-2 rounded-md transition-all overflow-hidden border border-success min-h-10 px-4"
  >
    <input
      class="input rounded-md transition-all duration-100 min-h-fit outline-0 border-none h-5 min-w-fit flex-1 focus-visible:outline-0 focus-visible:ring-0 focus-visible:ring-offset-0 focus-visible:border-0 placeholder:text-muted-foreground px-1"
      placeholder="success badge"
      tabindex="0"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`TagsInput > has tiny (xs) size 1`] = `
<DocumentFragment>
  <div
    class="flex items-center flex-wrap gap-1 h-fit rounded-md transition-all overflow-hidden min-h-6 px-2 py-1 text-xs"
  >
    <input
      class="input rounded-md transition-all duration-100 min-h-fit outline-0 border-none min-w-fit flex-1 focus-visible:outline-0 focus-visible:ring-0 focus-visible:ring-offset-0 focus-visible:border-0 placeholder:text-muted-foreground px-1 h-3 text-xs"
      placeholder="TagsInput tiny"
      tabindex="0"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`TagsInput > has warning variant 1`] = `
<DocumentFragment>
  <div
    class="flex items-center flex-wrap gap-1 h-fit py-2 rounded-md transition-all overflow-hidden border border-warning min-h-10 px-4"
  >
    <input
      class="input rounded-md transition-all duration-100 min-h-fit outline-0 border-none h-5 min-w-fit flex-1 focus-visible:outline-0 focus-visible:ring-0 focus-visible:ring-offset-0 focus-visible:border-0 placeholder:text-muted-foreground px-1"
      placeholder="warning badge"
      tabindex="0"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`TagsInput > renders some default tags 1`] = `
<DocumentFragment>
  <div
    class="flex items-center flex-wrap gap-1 h-fit py-2 rounded-md transition-all overflow-hidden min-h-10 px-4"
  >
    <span
      aria-disabled="false"
      class="badge badge-ghost text-xs rounded-md relative flex items-center gap-1 [&>span]:truncate [&>span]:max-w-24 aria-disabled:opacity-50 aria-disabled:cursor-not-allowed focus-visible:outline-none"
      data-active="false"
      tabindex="-1"
    >
      <span
        class="truncate max-w-24"
      >
        Hello
      </span>
      <button
        aria-label="Remove Hello option"
        aria-roledescription="button to remove option"
        class="transition-all duration-300 disabled:cursor-not-allowed [&:hover:not(:disabled)]:opacity-80"
        type="button"
      >
        <span
          class="sr-only"
        >
          Remove Hello option
        </span>
        <svg
          class="lucide lucide-x h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 6 6 18"
          />
          <path
            d="m6 6 12 12"
          />
        </svg>
      </button>
    </span>
    <span
      aria-disabled="false"
      class="badge badge-ghost text-xs rounded-md relative flex items-center gap-1 [&>span]:truncate [&>span]:max-w-24 aria-disabled:opacity-50 aria-disabled:cursor-not-allowed focus-visible:outline-none"
      data-active="false"
      tabindex="-1"
    >
      <span
        class="truncate max-w-24"
      >
        World
      </span>
      <button
        aria-label="Remove World option"
        aria-roledescription="button to remove option"
        class="transition-all duration-300 disabled:cursor-not-allowed [&:hover:not(:disabled)]:opacity-80"
        type="button"
      >
        <span
          class="sr-only"
        >
          Remove World option
        </span>
        <svg
          class="lucide lucide-x h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 6 6 18"
          />
          <path
            d="m6 6 12 12"
          />
        </svg>
      </button>
    </span>
    <input
      class="input rounded-md transition-all duration-100 min-h-fit outline-0 border-none h-5 min-w-fit flex-1 focus-visible:outline-0 focus-visible:ring-0 focus-visible:ring-offset-0 focus-visible:border-0 placeholder:text-muted-foreground px-1"
      placeholder="Enter anything"
      tabindex="0"
      value=""
    />
  </div>
</DocumentFragment>
`;
